# Gint

./: .gitignore  CMakeLists.txt  README.md  TODO  fx9860g.ld.c  fxcg50.ld.c  giteapc.make
cmake/: FindGint.cmake
include/gint/: config.h.in  display-cg.h  display-fx.h  display.h  drivers.h  fs.h  gint.h  hardware.h  image.h  intc.h  keyboard.h  keycodes.h  kmalloc.h  usb-ff-bulk.h  usb.h
include/gint/defs/: attributes.h  call.h  types.h
include/gint/drivers/: keydev.h  r61524.h  states.h
src/cpg/: cpg.c  overclock.c
src/cpu/: cpu.c
src/fs/: fs.c
src/fs/fugue/: fugue_dir.c  fugue_open.c
src/gray/: engine.c  gclear.c  ggetpixel.c  gint_gline.c  gpixel.c  grect.c  gsubimage.c  gtext.c
src/image/: fixed.h  image_alloc.c  image_alloc_palette.c  image_alpha.c  image_clear.c  image_copy.c  image_copy_alloc.c  image_copy_palette.c  image_create.c  image_create_vram.c  image_data_size.c  image_decode_pixel.c  image_fill.c  image_free.c  image_get_pixel.c  image_hflip.c  image_hflip_alloc.c  image_linear.S  image_linear.c  image_linear_alloc.c  image_rotate.c  image_rotate_around.c  image_rotate_around_scale.c  image_scale.c  image_set_palette.c  image_set_pixel.c  image_sub.c  image_target.c  image_valid.c  image_vflip.c  image_vflip_alloc.c
src/intc/: intc.c
src/kernel/: exch.c  hardware.c  inth.S  kernel.c  kernel.h  osmenu.c  start.c  syscalls.S  tlbh.S  world.c
src/keysc/: getkey.c  iokbd.c  keydev.c  keysc.c
src/kmalloc/: arena_gint.c  kmalloc.c
src/mmu/: mmu.c
src/r61524/: r61524.c
src/render/: dline.c  render.h  topti.c
src/render-cg/: dclear.c  dgetpixel.c  dpixel.c  drect.c  dsubimage.c  dupdate.c  dvram.c  gint_dline.c  topti-asm.h  topti-asm.s  topti.c
src/render-cg/image/: image.c  image_p4.S  image_p4.c  image_p4_clearbg.S  image_p4_clearbg_alt.S  image_p4_clearbg_alt.c  image_p4_dye.S  image_p4_dye.c  image_p4_effect.c  image_p4_normal.S  image_p4_swapcolor.S  image_p4_swapcolor.c  image_p8.S  image_p8.c  image_p8_clearbg.S  image_p8_dye.S  image_p8_dye.c  image_p8_effect.c  image_p8_normal.S  image_p8_swapcolor.S  image_p8_swapcolor.c  image_rgb16.S  image_rgb16.c  image_rgb16_clearbg_dye.S  image_rgb16_dye.c  image_rgb16_effect.c  image_rgb16_normal.S  image_rgb16_swapcolor.S  image_rgb16_swapcolor.c
src/render-fx/: bopti-asm-gray-scsp.s  bopti-asm-gray.s  bopti-asm-mono-scsp.s  bopti-asm.h  bopti-asm.s  bopti.c  dclear.c  dgetpixel.c  dpixel.c  drect.c  dsubimage.c  dupdate.c  gint_dline.c  masks.c  render-fx.h  topti-asm.h  topti-asm.s  topti.c
src/t6k11/: t6k11.c
src/usb/: configure.c  setup.c  usb.c
src/usb/classes/: ff-bulk-gray.c  ff-bulk.c
